# Typex

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ZH.md  ROADMAP.md  WINDOWS_PORTING_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
docs/: 01-product-overview.md  02-features.md  03-model-providers.md  04-design-system.md  05-ux-spec.md  06-code-architecture.md  06-roadmap.md  07-code-architecture.md  07-testing.md  08-decisions.md  08-testing.md  09-decisions.md  09-release-checklist.md  10-versioning.md  README.md  release-checklist.md
docs/fixtures/: denoise-cases.md  rewrite-vs-answer-cases.md  translate-cases.md  voice-qa-cases.md
docs/mockups/: README.md  tokens.css  ui-mono.html
scripts/: aggregate-updater-manifests.mjs  aggregate-updater-manifests.test.mjs  bundle-macos-runtime-dylibs.sh  eval-prompts.ts  gen-icons.py  prepare-macos-assets.sh  prepare-windows-assets.ps1  stage-windows-runtime.ps1  tauri.mjs  verify-windows-bundle.ps1
scripts/cmake/: windows-llama.cmake
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.bundle.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  runner.rs
src-tauri/src/app/: commands.rs  events.rs  mod.rs  tray.rs  tray_icon.rs  update.rs  windows.rs
src-tauri/src/audio/: chime.rs  mod.rs  pipeline.rs  recorder.rs  vad.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: mod.rs  rdev_backend.rs  windows_backend.rs
src-tauri/src/inject/: mod.rs  paste.rs  type_direct.rs  windows.rs
src-tauri/src/local/: download.rs  hardware.rs  import.rs  llm_llama.rs  manifest.rs  mod.rs  stt_qwen_asr.rs  stt_sense_voice.rs  stt_whisper.rs  threading.rs
src-tauri/src/orchestrator/: assistant.rs  mod.rs  pipeline.rs  session.rs
src-tauri/src/platform/: autostart.rs  focus.rs  macos.rs  mod.rs  permissions.rs  shell.rs  windows.rs
src-tauri/src/providers/: error.rs  http.rs  mod.rs  registry.rs
src-tauri/src/providers/llm/: chat_completions.rs  mod.rs  prompt.rs  responses.rs
src-tauri/src/providers/stt/: mod.rs  openai_compat.rs  volcengine.rs
src-tauri/src/selection/: mod.rs  windows.rs
src-tauri/src/settings/: migrate.rs  mod.rs  schema.rs  secrets.rs
src-tauri/src/types/: audio.rs  hotkey.rs  mod.rs  profile.rs  session.rs
src-tauri/tests/: contract_snapshots.rs  local_models.rs  providers_wiremock.rs  windows_platform_harness.rs
src-tauri/tests/snapshots/: contract_snapshots__chat_completions_request.snap  contract_snapshots__openai_compat_stt_request.snap  contract_snapshots__responses_request.snap  contract_snapshots__volcengine_stt_request.snap
src-tauri/windows/: installer-hooks.nsh
src-tauri/windows-runtime-notices/: THIRD-PARTY-NOTICES.windows.txt
src/__tests__/: i18n-errorcodes.test.ts  i18n-parity.test.ts  presets.test.ts
src/components/: AppIcon.vue  Button.vue  Callout.vue  FormRow.vue  HotkeyRecorder.test.ts  HotkeyRecorder.vue  Input.vue  Kbd.vue  ProviderCard.test.ts  ProviderCard.vue  SecretInput.vue  SegmentedControl.vue  Select.test.ts  Select.vue  Toggle.vue
src/composables/: useLocale.ts  usePlatform.test.ts  usePlatform.ts  useSetting.ts  useTheme.ts
src/i18n/: en.json  index.ts  zh-CN.json
src/shared/: floating-window.test.ts  floating-window.ts  format.ts  hotkeys.test.ts  hotkeys.ts  presets.ts
src/stores/: settings.ts
src/styles/: base.css  tokens.css
src/windows/assistant/: Assistant.test.ts  Assistant.vue  index.html  main.ts
src/windows/home/: Home.test.ts  Home.vue  main.ts
src/windows/hud/: Hud.test.ts  Hud.vue  Waveform.vue  index.html  ipc.ts  main.ts  waveform-scale.test.ts  waveform-scale.ts
src/windows/onboarding/: Onboarding.test.ts  Onboarding.vue  index.html  main.ts
src/windows/settings/: Settings.vue  index.html  main.ts
src/windows/settings/pages/: AboutPage.vue  AssistantPage.test.ts  AssistantPage.vue  DebugPage.test.ts  DebugPage.vue  DiagnosticsPage.test.ts  DiagnosticsPage.vue  DictationPage.test.ts  DictationPage.vue  GeneralPage.test.ts  GeneralPage.vue  HistoryPage.vue  HotkeysPage.test.ts  HotkeysPage.vue  ModelManager.test.ts  ModelManager.vue  ProfileEditor.test.ts  ProfileEditor.vue  ProvidersPage.test.ts  ProvidersPage.vue  TranslationPage.test.ts  TranslationPage.vue
tools/updater-signature-verifier/: Cargo.toml
tools/updater-signature-verifier/src/: main.rs
website/: index.html  tsconfig.json  vite.config.ts  vitest.config.ts
website/public/: robots.txt  sitemap.xml
website/scripts/: sync-assets.mjs  verify-build.mjs
website/src/: App.test.ts  App.vue  content.test.ts  content.ts  demo-controller.test.ts  demo-controller.ts  env.d.ts  links.ts  main.ts  preferences.test.ts  preferences.ts
website/src/components/: DemoWaveform.vue  FeatureSection.vue  FeatureVisual.test.ts  FeatureVisual.vue  ProductDemo.test.ts  ProductDemo.vue  SiteHeader.test.ts  SiteHeader.vue
website/src/styles/: site.css
