[package]
name = "typex"
version = "0.1.0"
description = "Typex — Speak. It types. 开源跨平台 AI 语音输入"
license = "GPL-3.0-only"
repository = "https://github.com/typex-ink/typex"
edition = "2024"
rust-version = "1.88"

[lib]
name = "typex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 系统能力（07 §1）
rdev = "0.5"
cpal = "0.16"
rubato = "0.16"
hound = "3.5"
arboard = "3"
enigo = "0.6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Provider HTTP
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "socks"] }
eventsource-stream = "0.2"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3.6"
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
base64 = "0.22.1"
tauri-plugin-updater = "2.10.1"
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice", "AVMediaFormat"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPanel", "NSWindow", "NSResponder", "NSApplication", "NSWorkspace", "NSRunningApplication"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[dev-dependencies]
wiremock = "0.6"
insta = { version = "1", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# rdev 0.5.3 补丁：监听回调不调 TSM 输入法 API（macOS 26 强制主线程，否则 SIGTRAP）
# 见 vendor/rdev/src/macos/common.rs 的 Typex patch 注释
[patch.crates-io]
rdev = { path = "vendor/rdev" }
