[package]
name = "typex"
version = "0.1.2"
description = "Typex — Speak. It types. 开源跨平台 AI 语音输入"
license = "GPL-3.0-only"
repository = "https://github.com/typex-ink/typex"
edition = "2024"
rust-version = "1.88"

[lib]
name = "typex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 系统能力（07 §1）
rdev = "0.5"
cpal = "0.16"
rubato = "0.16"
hound = "3.5"
arboard = "3"
enigo = "0.6"

# Provider HTTP
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "socks"] }
eventsource-stream = "0.2"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3.6"
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
base64 = "0.22.1"
tauri-plugin-updater = "2.10.1"
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice", "AVMediaFormat"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.38.4", optional = true }
sha2 = { version = "0.10", optional = true }
sherpa-rs = { version = "0.6.8", default-features = false, optional = true }
sherpa-rs-sys = { version = "0.6.8", default-features = false, optional = true }
# mtmd feature：Qwen3-ASR 音频输入需要 llama.cpp tools/mtmd（CP-8.4）
llama-cpp-2 = { version = "0.1.150", features = ["metal", "mtmd"], optional = true }
# llama-cpp-2 内部已依赖 encoding_rs；这里显式引用用于 token 增量 UTF-8 解码（CP-8.5）
encoding_rs = { version = "0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPanel", "NSWindow", "NSResponder", "NSApplication", "NSWorkspace", "NSRunningApplication"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[dev-dependencies]
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# rdev 0.5.3 补丁：监听回调不调 TSM 输入法 API（macOS 26 强制主线程，否则 SIGTRAP）
# 见 vendor/rdev/src/macos/common.rs 的 Typex patch 注释
[patch.crates-io]
rdev = { path = "vendor/rdev" }

[features]
# 本地模型默认启用（项目所有者 2026-07-06 拍板：v0.1.1 起随默认构建交付）
default = ["local-models"]
# 本地模型（F-12 / ADR-20/22）：推理引擎与探测依赖集中在此 feature（可 --no-default-features 裁剪）
local-models = [
    "dep:sysinfo",
    "dep:sha2",
    "dep:sherpa-rs",
    "dep:sherpa-rs-sys",
    "dep:llama-cpp-2",
    "dep:encoding_rs",
]
